inventory service changes
